# schardl_bioinfo_site

./: .gitignore  COPYRIGHT  MANIFEST.in  Project-description.txt  README  README.md  pyproject.toml  requirements.txt  run.py  run_debug.py  slideshow_image_manifest.py  wsgi.py
.github/workflows/: build-wheel.yml
bioinfo_site/: __init__.py
bioinfo_site/errors/: handlers.py
bioinfo_site/routes/: routes.py
bioinfo_site/static/: biographies.json  collection_sites.csv  plant_sites.csv  site.webmanifest  slideshow_manifest.json
bioinfo_site/static/css/: avatar.min.css
bioinfo_site/static/js/: util.js
bioinfo_site/templates/: biographies.html  collection_sites.html  ecoregions.html  gbrowse.html  home.html  layout.html  map.html  project_details.html
bioinfo_site/templates/errors/: 401.html  403.html  404.html  405.html
bioinfo_site/utils/: user_model.py
site/: __init__.py
site/errors/: handlers.py
site/routes/: routes.py
site/static/: site.webmanifest
site/templates/: home.html  layout.html
