[project]
name = "schardl_bioinfo_site"
version = "0.1.0"
authors = [
  { name="Nyx Harris-Palmer" },
  { name="Tharanie Subramaniam" },
]
description = "Bioinformatics Website"
readme = "README"
requires-python = ">=3.11"
dependencies = [
    "blinker",
    "build",
    "click",
    "Flask",
    "itsdangerous",
    "Jinja2",
    "MarkupSafe",
    "packaging",
    "pip",
    "psycopg2-binary",
    "pyproject_hooks",
    "setuptools",
    "Werkzeug",
    "wheel",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"