[project]
name = "schardl_bioinfo_site"
version = "0.1.0"
authors = [
  { name="Nyx Harris-Palmer" },
  { name="Tharanie Subramaniam" },
]
description = "Bioinformatics Website"
readme = "README"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.6.2",
    "build==0.10.0",
    "click==8.1.3",
    "Flask==2.3.2",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.2",
    "packaging==23.1",
    "pip==23.1.2",
    "psycopg2-binary==2.9.6",
    "pyproject_hooks==1.0.0",
    "setuptools==65.6.3",
    "Werkzeug==2.3.4",
    "wheel==0.38.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"