[project]
name = "schardl_bioinfo_site"
version = "0.1.0"
authors = [
  { name="Nyx Harris-Palmer" },
  { name="Tharanie Subramaniam" },
]
description = "Bioinformatics Website"
readme = "README"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.6.2",
    "build==1.0.3",
    "click==8.1.7",
    "Flask==2.3.3",
    "Flask-Login==0.6.2",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "packaging==23.1",
    "pip==23.2.1",
    "pyproject_hooks==1.0.0",
    "python-dotenv==1.0.0",
    "setuptools==67.8.0",
    "Werkzeug==2.3.7",
    "wheel==0.40.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"